fix: layout fix in mobile view

--- a/src/pages/accounting.astro
+++ b/src/pages/accounting.astro
@@ -8,47 +8,47 @@ changeLanguage("en");
 
 <Layout lang="en" title="Accounting">
 	<Container>
-		<div class="px-5 py-15 dark:bg-stone-900">
-			<div class="md:flex justify-between items-center gap-10">
-				<div class="flex flex-col h-full justify-center flex-2">
-					<h1 class="text-[40px] md:text-[50px] leading-none font-semibold text-[#192734] dark:text-white">ERPNext Hungarian Accounting</h1>
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+				<div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext Hungarian Accounting</h1>
 					<p class="text-gray-400 dark:text-white text-xl my-5">Solutions to Support Accounting</p>
 				</div>
-				<div class="flex-1 py-32">
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
 					<img class="w-full" src="/images/erpnextImage.png" alt="" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center text-[#192734] dark:text-white">
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10 ">"You can do accounting on a piece of paper."</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5">
+					<p class="list-disc text-lg leading-7 space-y-5">
 						This is a saying from an unknown accountant. But despite that, almost everyone (usually) uses some kind of double-entry accounting or accounting program to handle financial events. However, this humorous remark points out the essential point that there are no specific requirements for accounting programs; one can only infer from various regulations related to accounting principles how accounting should be done.
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10 ">So why do accountants use accounting software?</h2>
-					<p class="list-disc text-[17px] leading-7 ">
+					<p class="list-disc text-lg leading-7 ">
 						Accounting programs automate and simplify many tasks, which is why accountants prefer using their own accounting software. They have to do less manual work, and thanks to automation, they can minimize inaccuracies that may arise during data entry.
 					</p>
-					<p class="list-disc text-[17px] leading-7 py-10 ">
+					<p class="list-disc text-lg leading-7 py-10 ">
 						Another important aspect is that accounting programs not only simplify the recording of financial events but also greatly facilitate the preparation of reports for the government authorities. It's no secret that most accounting programs can generate monthly VAT reports in the required format (ÁNYK) with just a few clicks. However, this process may require some adjustments and manual review to ensure that the reports are error-free, regardless of the software used.
 					</p>
-					<p class="list-disc text-[17px] leading-7 ">
+					<p class="list-disc text-lg leading-7 ">
 						Besides handling monthly reports, accounting programs can also be helpful in preparing annual financial statements. However, it's worth noting that this functionality might not be well-implemented in all accounting programs. Consequently, there are additional reporting solutions that some accountants use in conjunction with their accounting software.
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10 ">Why is this relevant to ERPNext?</h2>
-					<p class="list-disc text-[17px] leading-7">
+					<p class="list-disc text-lg leading-7">
 						From the above, it's evident that some accountants choose their own accounting program due to convenience, speed, and accuracy. They might not want or be able to adapt to other systems and may charge additional fees for using external software, even though it would reduce their workload, making it eligible for a discount.
 					</p>
-					<p class="list-disc text-[17px] leading-7 py-10">
+					<p class="list-disc text-lg leading-7 py-10">
 						However, there is another segment of the profession that doesn't mind which accounting program they use, as they possess a higher level of knowledge and perspective on accounting. They can further automate and configure processes without in-depth knowledge of the software.
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10">How can ERPNext be used for Hungarian accounting?</h2>
-					<p class="list-disc text-[17px] leading-7 pb-10">
+					<p class="list-disc text-lg leading-7 pb-10">
 						Considering the above, there are several ways to use ERPNext for Hungarian accounting. When using ERP systems, the following solutions are common:
 					</p>
 					<ul class="list-decimal ml-10 space-y-5">
@@ -67,16 +67,16 @@ changeLanguage("en");
 					</ul>
 				</section>
 
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10">What are the advantages of using ERPNext for accounting?</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5">
+					<p class="list-disc text-lg leading-7 space-y-5">
 						Single source of truth – everyone sees the same information from a single interface (with appropriate permissions). Only one interface needs to be learned, and ERPNext is quite intuitive. There is no duplicate work, as most tasks can be automated, such as automatic booking of outgoing invoices. Incoming invoices should primarily be handled by ERPNext to track payment status, possibly simplified with bank synchronization.
 					</p>
 				</section>
 
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10">Okay, but how are the reports prepared in ERPNext?</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5">
+					<p class="list-disc text-lg leading-7 space-y-5">
 						The Hungarian ERPNext and Frappe community is continuously working on localizing ERPNext, aiming to achieve the optimal solution mentioned in point 3. Until then, using external Excel-based reporting and financial statement software is the most suitable solution. These software tools receive data from ERPNext and produce the necessary documents for Hungarian accounting.
 					</p>
 				</section>
