--- a/src/pages/erpnext-hosting.astro
+++ b/src/pages/erpnext-hosting.astro
@@ -9,10 +9,10 @@ changeLanguage("en");
 
 <Layout lang="en" title="ERPNext Hosting">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">ERPNext & Frappe Hosting</h1>
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+				<div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext & Frappe Hosting</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext hosting in the Cloud</h2>
 				<div>
 					<Link href="/contact/">
@@ -20,12 +20,12 @@ changeLanguage("en");
 					</Link>
 				</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/erpnext-hosting.png" alt="" />
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+					<img class="w-full" src="/images/erpnext-hosting.png" alt="" />
 				</div>
 			</div>
 <div class="flex flex-col items-center">
-    <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+    <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
         <h2 class="font-bold text-3xl mb-10">Convinient ERPNext & Frappe managed or self-service hosting</h2>
         <p class="text-lg mt-20 dark:text-white text-[#1F2634]">
             ERPNext hosting requires expertise and specific technical conditions. After years of collaboration with various partners,
