--- a/src/pages/gocardless.astro
+++ b/src/pages/gocardless.astro
@@ -9,10 +9,10 @@ changeLanguage("en");
 
 <Layout lang="en" title="ERPNext GoCardless Bank Integration">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">ERPNext GoCardless Bank Integration</h1>
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+				<div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext GoCardless Bank Integration</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Automatic synchronization of bank transactions.</h2>
 					<div>
 						<Link href="/contact">
@@ -20,22 +20,22 @@ changeLanguage("en");
 						</Link>
 					</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/Bucket-1-Illo-1.png" alt="ERPNext GoCardless Bank Integration" />
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+					<img class="w-full" src="/images/Bucket-1-Illo-1.png" alt="ERPNext GoCardless Bank Integration" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Save time with automatic bank transaction synchronization!</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						You can manually upload the bank statement to ERPNext if your bank provides it in a tabular form. <br><br>
 						In this case, you can either set up the import on the ERPNext interface or format the table received from the bank for ERPNext. <br><br>
 						Now you can import the bank statement and start the reconciliation, matching manually entered payment entries with the movements on the bank account.
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Less manual, boring tasks with automation</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						Thanks to the European open banking directive, banks are required to provide access to banking data according to industry standards, with the appropriate permissions. <br><br>
 						Various services have been built for the "exchange" of such banking data, allowing easy access to bank data with the right permissions. <br><br>
 						Several providers exist in the market, such as Plaid, which is already integrated into ERPNext, but data from Hungarian banks is not accessible through this service. (However, Wise and Revolut can be accessed through some tricks and for an uncertain duration.) <br><br>
@@ -43,17 +43,17 @@ changeLanguage("en");
 						Following our usual standards in development, we used the ERPNext Bank transaction doctype for the development, making our app compatible with both the built-in matching solution and other enhanced bank reconciliation apps. The latter is interesting because it can almost completely automate the process and make it much faster.
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Without limitations</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						Calculate how much it costs in work hours to import and reconcile bank transactions for several hours. With our solution, you can request an unlimited number of transactions from almost any bank's own account. <br><br>
 						(Although access must be renewed every 90 days, and a bank account belonging to the same bank counts as one request, with the company! With up to 50 authentications per month, you can request transactions from up to 50 banks and an unlimited number of accounts associated with that bank.) <br><br>
 					</p>
 				</section>
 
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Only €49/month/server - unlimited companies</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						Our solution is currently available for self-service with ERPNext version 14, which supports multi-company setup but does not yet have company-specific access. However, in the upcoming version 15, we will further enhance this. <br><br>
 						After the order below, we will automatically launch an ERPNext instance on the Frapp Cloud system, which can run custom code, and by providing administrator access, the system can be used immediately, and bank synchronization can be set up. <br><br>
 						With this solution, we ensure that the ERPNext GoCardless app is available on the ERPNext machine and can be used for bank synchronization as long as the subscription is active. However, we do not provide access to the source code, and transactions do not go through our servers. <br><br>
