--- a/src/pages/hu/frappe-framework.astro
+++ b/src/pages/hu/frappe-framework.astro
@@ -9,10 +9,10 @@ changeLanguage("hu");
 
 <Layout lang="hu" title="No code, low code, nyílt forráskódú, web keretrendszer Python és Javascript alapon">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">Frappe Framework</h1>
+    <div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+        <div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold">Frappe Framework</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">No code, low code keretrendszer a gyors fejlesztéshez.</h2>
 				<div>
 					<Link href="/hu/kapcsolat">
@@ -20,22 +20,22 @@ changeLanguage("hu");
 					</Link>
 				</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/frappe-framework.jpg" alt="" />
-				</div>
+            <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+					<img class="w-full" src="/images/frappe-framework.jpg" alt="" />
+				</div> 
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">No code és low code megoldások</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						A no code és low code fejlesztési módszerek olyan eszközöket és platformokat használnak, amelyek lehetővé teszik alkalmazások és szoftverek készítését anélkül, hogy mély programozási ismeretekre lenne szükség. <br><br>
 						No code: Az egyik véglet, ahol a fejlesztőknek szinte semmilyen kódírási ismeretük nincs szükség. Ebben az esetben az eszközök és platformok olyan egyszerűek, hogy gyakorlatilag bárki könnyen létrehozhat alkalmazásokat, folyamatokat vagy weboldalakat. A Frappe esetén ez példul azt jelenti, hogy új mezőket és folyamatokat (workflow) tudunk definiálni a felületen, saját kód írása nélkül. <br><br>
 						Low code: Itt már van némi programozási kontroll, de a fejlesztőknek csak minimális kódírásra van szükségük. A low code platformok gyorsítják a fejlesztési folyamatot és lehetővé teszik az alkalmazások testreszabását anélkül, hogy teljesen nulláról kellene létrehozni őket. Frappe Framework esetén a következő bekezdésben láthatjuk, hogy milyen előre használható alkotó elemeket hasznosíthatunk ebben a szemléletben. <br><br>
 						Mindkét módszer célja, hogy egyszerűsítse a szoftverfejlesztést, lehetővé téve üzleti szakembereknek és kevésbé tapasztalt fejlesztőknek is, hogy hatékonyan és gyorsan hozzanak létre alkalmazásokat és automatizáljanak folyamatokat.
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Frappe Framework elemei</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						A Frappe a következő alapmodulokkal érkezik, amelyekre szükség van minden komoly üzleti alkalmazás létrehozásához: <br><br>
 						Metaadatok használata: A Frappe-ben minden egy DocType. DocType-ok könnyen definiálhatók kód nélkül, és mindenhol használhatók.<br><br>
 						Admin és felhasználói felület out of the box: A Frappe gazdag beállításokkal érkezik, amely beépített űrlapokkal, listákkal, kereséssel és navigációval rendelkezik.<br><br>
@@ -47,9 +47,9 @@ changeLanguage("hu");
 						Email beállítás: Egyszerűen küldheted, fogadhatod, megtekintheted és kezelheted az emaileket SMTP és IMAP alapú email fiókok használatával.<br><br>
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">ERPnext keretrendszer</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						Jól mutatja a Frappe által készített Frappe keretrendszer minőségét, hogy ez az egyetlen ismert olyan No code/Low code keretrenszer, amin egy komplex, teljes (nyílt forráskódú és ingyenes) ERP rendszert építettek fel. <br><br>
 						Az ERPNext a Frappe Framework-re épül, így az ERPNext maga is könnyedén továbbfejleszthető, testreszabható. <br><br>
 						És ha mindez nem lenne elég, a Frappe olyan gyorsan fejlődik, hogy úgy követi le világ és technológia változásokat, hogy egyszerűvé teszi az alkalmazások frissítését. A 15-ös verzióra teljesen megújították a megjelenést, amely a sebességet és a testreszabhatóságot javította a saját FrappeUI bevezetésvel és integrálásával. 
