--- a/src/pages/hu/konyveles.astro
+++ b/src/pages/hu/konyveles.astro
@@ -8,34 +8,34 @@ changeLanguage("hu");
 
 <Layout lang="hu" title="Könyvelést">
 	<Container>
-		<div class="px-5 py-15">
-			<div class="md:flex justify-between items-center gap-10 text-[#192734] dark:text-white">
-				<div class="flex flex-col h-full justify-center flex-2">
-					<h1 class="text-[40px] md:text-[50px] leading-none font-semibold">ERPNext magyar könyvelés</h1>
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+				<div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext magyar könyvelés</h1>
 					<p class="text-gray-400 text-xl my-5">Könyvelést támogató megoldások</p>
 				</div>
-				<div class="flex-1 py-32">
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
 					<img class="w-full" src="/images/erpnextImage.png" alt="" /> 
 				</div>
 			</div>
 			<div class="flex flex-col items-center text-[#192734] dark:text-white">
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10">“Könyvelni kockás papíron is lehet.”</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5">
+					<p class="list-disc text-lg leading-7 space-y-5">
 						Tartja az ismeretlen könyvelőtől származó “ősi” közmondás. De ennek ellenére ma már szinten mindenki (általában) valamilyen
 						kettős könyvviteli, könyvelő programmal könyveli a gazdasági eseményeket. De a vicces megjegyzés nagyon jól rávilágít arra a
 						lényeges pontra, hogy nincsen könyvelőprogramokra vonatkozó előírás, hanem a különböző, pl számviteli rendet érintő
 						jogszabályokból lehet csupán azt kiolvasni, hogy magának a könyvelésnek milyen szabályok mentén kell megtörténnie.
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10">Akkor miért használnak a könyvelők valamilyen könyvelési programot?</h2>
-					<p class="list-disc text-[17px] leading-7">
+					<p class="list-disc text-lg leading-7">
 						A könyvelő programok rengeteg dolgot automatizálnak és leegyszerűsítenek, ezért szeretik a könyvelők a saját könyvelő
 						programukat használni. Jóval kevesebb manuális munkát kell elvégezniük a könyvelőknek és az automatizációknak köszönhetően az
 						adatrögzítésből adódó esetleges pontatlanságokat is minimalizálhatják.
 					</p>
-					<p class="list-disc text-[17px] leading-7 py-10">
+					<p class="list-disc text-lg leading-7 py-10">
 						A másik fontos szempont, hogy nem csupán a gazdasági események rögzítése egyszerűsödik a könyvelő programoknak és azok
 						automatizmusainak köszönhetően, hanem az állam részére elkészítendő bevallások előállítását is nagyban megkönnyítik. Nem
 						titok, hogy a legtöbb könyvelő program a havi áfabevallásokat az ÁNYK formátumában szinte gombnyomásra el tudja készíteni.
@@ -44,33 +44,33 @@ changeLanguage("hu");
 						kézzel felülvizsgálva, szükség esetén javítva könyveljék, hogy utána a bevalláskészítés már lehetőleg hibamentes legyen,
 						függetlenül a használt programtól).
 					</p>
-					<p class="list-disc text-[17px] leading-7">
+					<p class="list-disc text-lg leading-7">
 						A havi bevallás mellett az éves beszámoló készítésben is nagy segítséget nyújtanak a könyvelő programok, de az az érdekesség,
 						hogy ez a funkció sincs minden könyvelő programban megfelelően elkészítve. Ezért is van a piacon több beszámoló készítő
 						megoldás, amit párban szoktak a kettős könyvviteli rendszerrel használni a könyvelők.
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10 ">Miért érdekes ez az ERPNext szempontjából?</h2>
-					<p class="list-disc text-[17px] leading-7 ">
+					<p class="list-disc text-lg leading-7 ">
 						A fentiekből látszik, hogy egyrészt kényelmi, másrészt sebesség, harmadrész pontosság miatt választják a könyvelők a saját
 						könyvelő programjuk használatát, hiszen a kézi könyveléstől ma már elszoktak és viszonylag kevesek azok, akik tudják, hogy mi
 						történik a “motorháztető” alatt és képesek lennének paraméterezni, vagy akár ellenőrizni könyvelőprogramunk működését.
 					</p>
-					<p class="list-disc text-[17px] leading-7 py-10 ">
+					<p class="list-disc text-lg leading-7 py-10 ">
 						Ebből következik, hogy az ilyen típusú könyvelők, akik már nem valószínű, hogy képesek lennének kockás papíron könyvelni, más
 						rendszerekben való könyvelést nem akarják és nem is tudják megoldani, vagy jellemzően értelmezhetetlen extra díjat kérnének
 						érte, pedig valójában az ő munkájuk csökkenne, tehát kedvezményre lennénk jogosultak.
 					</p>
-					<p class="list-disc text-[17px] leading-7 ">
+					<p class="list-disc text-lg leading-7 ">
 						Ott van azonban a szakma azon része, akiknek teljesen mindegy, hogy milyen program elé kerülnek, mert magasabb tudással, más
 						szempontból tekintenek a könyvelésre. Ők a saját munkájuk könnyítése érdekében további automatizációkat és paraméterezéseket
 						is képesek elvégezni a programok mélyebb szintű ismerete nélkül.
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10 ">Hogyan használható az ERPNext magyar könyvelésre?</h2>
-					<p class="list-disc text-[17px] leading-7 pb-10 ">
+					<p class="list-disc text-lg leading-7 pb-10 ">
 						A fentiekből következik, hogy több út is van az ERPNext magyar használatára. ERP rendszerek használata esetén az alábbi
 						megoldásokkal szoktunk találkozni:
 					</p>
@@ -103,9 +103,9 @@ changeLanguage("hu");
 					</ul>
 				</section>
 
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10 ">Mik az előnyei az ERPNext-ben való könyvelésnek?</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5 ">
+					<p class="list-disc text-lg leading-7 space-y-5 ">
 						Single source of truth - azaz mindenki ugyan onnan tájékozódik, mindenki ugyan azt látja. (persze a megfelelő jogosultsággal).
 						Egy felületet kell csak megtanulni, ami az ERPNext esetében elég intuitív. Nincs dupla munka, a legtöbb dolog automatizálható,
 						hiszen például a kimenő számláink automatikusan könyvelésre kerülnek. Ahogy a bejövő számláinkat is elsősorban az ERPNext-nek
@@ -113,9 +113,9 @@ changeLanguage("hu");
 					</p>
 				</section>
 
-				<section class="py-8 px-4 md:w-[45vw]">
+				<section class="py-8 px-4 md:w-2/3">
 					<h2 class="font-bold text-3xl mb-10 ">Oké, de hogyan készülnek akkor a bevallások és a beszámoló?</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5 ">
+					<p class="list-disc text-lg leading-7 space-y-5 ">
 						A magyar ERPNext és Frappe közösség folyamatosan dolgozik az ERPNext lokalizálásán, így idővel a legideálisabb 3. pontban
 						említett megoldás elérésére törekszünk, de addig is az ERPNext könyvelésre történő használata a külső Excel alapú bevallás és
 						beszámoló készítő szoftverekkel a legideálisabb. Amelyeken kívül további magyar könyveléshez kapcsolódó, könyvelési feladatot
