--- a/src/pages/hu/n8n-zapier-make-integromat.astro
+++ b/src/pages/hu/n8n-zapier-make-integromat.astro
@@ -9,10 +9,10 @@ changeLanguage("hu");
 
 <Layout lang="hu" title="n8n ">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">n8n a hiányzó láncszem</h1>
+    <div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+        <div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">n8n a hiányzó láncszem</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Az olajozott, naprakész működéshez.</h2>
 				<div>
 					<Link href="/hu/kapcsolat">
@@ -20,37 +20,37 @@ changeLanguage("hu");
 					</Link>
 				</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/n8n-zapier-make-integromat.jpg" alt="" />
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+					<img class="w-full" src="/images/n8n-zapier-make-integromat.jpg" alt="" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Még mindig vannak ismétlődő, unalmas feladatok?</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 							Aki ismeri az n8n automatizációs szoftvert, vagy a hasonló "elődjeit", mint a Zapier, Make (Integromat), az tudja, hogy ha a legjobb integrált szoftvert is használja az ember, mint az ERPNext, vagy az Odoo, akkor is sokszor kell még ezen szoftverek mellett más szoftvereket, appokat, weboldalakt használni. 
 				</br></br>
 				De ilyenkor legtöbbször valamilyen információra saját rendszerünkből is szükség van, vagy épp ismétlődő feladatot kell végrehajtanunk.  </br></br>
 				Ezekben lehet segítségünkre az n8n, mert gyárilag tud kapcsolódni, több, mint 477 szoftverhez vagy szolgáltatáshoz, többek között az ERPNext-hez és az Odoo-hoz is. Így ha bármit ki szeretnénk olvasni ezekből a rendszerekből vagy beleírni, vagy szinkronizálni más rendszerekkel, akkor ezt könnyedén megtehetjük, hiszen nem azzal kell kezdenünk, hogy megírjuk az API kapcsoltot, hanem egyből tudunk kapcsolódni a megfelelő jogosultságokkal. Használatával, mivel mi magunk is hosztolhatjuk, a saját üzemeltetésnek köszönhetően adatvédelemi szempontból is jó megoldás amikor adatokat mozgatunk vagy tárolunk.
 				</section>
 
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Hiányoznak funkciók a megszokott szoftverekből?</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						Annak ellenére, hogy az általunk ideális stack-nek tartott háttérrendszer, pl ERPNext vagy Odoo használata mellett és a hozzá kapcsolódó szinkronizáció nélküli VueStoreFront headless és vagy statikus weboldalt tartjuk a legtöbb esetben a legjobb megoldásnak, ahol pont kizártuk a szinkronizációt és abból adódó esetleges problémákat, ott ahol a másik rendszer, amivel adatot kell cserélni, nem a mi tulajdonunk, szükségünk van szinkronizációra, ha nem szeretnénk kézzel másolgatni, ami a legdrágább és legkockázatosabb megoldás. 
 				</br></br>
 				Például az ERPNext ugyan gyárilag tud a Google Naptárral szinkronizálni, de nem mindent, így például használhatjuk az n8n-t arra, hogy olyan ERPNext doctype-okból készítsen a Google Naptárba bejegyzést, amiből alapból nem tudnánk. Rengeteg lehetőségünk van, akár email küldésre is használhatjuk, de ismerjük a rendszer korlátait, mert egy komplex "weboldal scrapelő" alkalmazást is készítettünk benne, amire azonban célszerű lehet inkább más megoldást használni. 
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Automatizáció és prototipizáció</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						A példákból és az általános bemutatásból már kiderült, hogy sok mindenre alkalms az n8n automatziáció terén, de annak ellenére, hogy vannak korlátai robosztus üzleti folyamatokat is kezelhetünk vele, mert megbízható, terhelhető az ingyenes és nyílt forrású* (fair code license) szoftver. De mindezek ellenére valamikor csak a gyors építkezés lehetősége (low code, no code) miatt prototipushoz és teszteléshez alkalmazzuk. És ha bevált, akkor megírjuk megoldást, amit a tapasztalat alapján már könnyebb és gyorsabb elkészíteni. 
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Igen, ChatGPT-hez is csatlakoztatható gyárilag</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 							Ezzel a trükkel lehetőségünk van az AI által nyújtott szolgáltatásokat becsatornázni, amelyre más módszerek sokkal körülményesebbek lennének. De annak aki nem ismeri az n8n lehetőségeit célszerú először az elérhető integrációk mellett a kész, azonnal (újra) használható "workflow"-kat átböngészni, mert abból rengeteg ötlet meríthető, hogy mi mindenre használható, amivel egyszerűsíthetjük üzleti folyamatainkat, kollágáink és saját életünket mentesítve az ismétlődő, időrabló feladatoktól és itt nem csak az ügyviteli feladatokra gondolhatunk, hanem az értékesítési és marketing folyamatoktól (pl: Mautic, Twitter, Chatbot stb. integrációk), Projektmenedzsmenten át akár az üzemeltetésig. 
 					</p>
 				</section>
