--- a/src/pages/hu/szamlazas.astro
+++ b/src/pages/hu/szamlazas.astro
@@ -9,10 +9,10 @@ changeLanguage("hu");
 
 <Layout lang="hu" title="ERPNext bevezetés és támogatás">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">ERPNext számlázás</h1>
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+				<div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext számlázás</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext magyar számlázás hamarosan - 2024 Q1</h2>
 				<div>
 					<Link href="/hu/kapcsolat">
@@ -20,14 +20,14 @@ changeLanguage("hu");
 					</Link>
 				</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/ERPNext-magyar-szamlazas.jpg" alt="ERPNext bevezetés" />
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+					<img class="w-full" src="/images/ERPNext-magyar-szamlazas.jpg" alt="ERPNext bevezetés" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">ERPNext magyar számlázás</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						<p class=" text-xl py-10">A magyar szabályoknak megfelelő számla kiállítását az ERPNext rendszerből hamarosan elérhetővé tesszük.			</p>
 				<img src="/images/IyzD8FB.png" alt="" />
 				<p class=" text-xl py-10">Ráadásul nem csak hagyományos számlázóként, hanem pénztárgépként is használható lesz az ERPNext.				</p>
