--- a/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
+++ b/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
@@ -47,21 +47,21 @@ const pricingData = [
   <Container>
     <div class="px-5 pt-10">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
-        <div class="flex flex-col h-full justify-center">
+        <div class="flex flex-col h-full justify-center basis-3/5">
           <h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">Ügyfélhívó, sorszámosztó kiosk renszer</h1>
           <h2 class="text-xl text-[#192734] dark:text-white my-4">Hotelek és hostelek részére.</h2>
           <a href="#pricing">
             <Button class="md:px-3 md:py-2 leading-6" style="primary">Csomagok</Button>
           </a>
         </div>
-        <div class="mt-10 md:mt-0">
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
           <img class="w-full" src="/images/qms.jpg" alt="" />
         </div>
       </div>
       <div class="flex flex-col items-center">
         <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
           <h2 class="font-bold text-3xl mb-10">Nincs többé felesleges sorbanállás</h2>
-          <p class="list-disc text-[17px] leading-7 space-y-5]">
+          <p class="list-disc text-lg leading-7 space-y-5]">
             Senki sem szeret sorbanállni. Főleg, egy hosszú út után. És egy hotelbe vagy hostelbe érkező vendég általában hosszú utat tett meg, mire
             eljut a check-in deskhez. Átvitt, digitális és valós értelemben is, hiszen a "digital journey" már jóval a foglalás előtt elkezdődött, nem
             csupán helyszínre érkezésekor. És tovább tart, mint a szállás elhagyása, hiszen a közös célunk, hogy visszatérő vevővé váljon, amit a
@@ -72,7 +72,7 @@ const pricingData = [
 
           <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
             <h2 class="font-bold text-3xl mb-10">Ügyfélélmény emelése egyszerűen</h2>
-            <p class="list-disc text-[17px] leading-7 space-y-5]">
+            <p class="list-disc text-lg leading-7 space-y-5]">
               Ügyfélhívó és sorszámosztó rendszerünkkel nem csupán a recepció előtti sort lehet felszámolni, hanem az előbb említett digitális user
               journey-be is beépíthető, és a sorbanállás nélküli bejelentkezés hirdetésével megkülönböztetheti magát a versenytársaktól amivel
               növelheti a foglalási konverziót is.
@@ -87,7 +87,7 @@ const pricingData = [
           </section>
           <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
             <h2 class="font-bold text-3xl mb-10">Nem csak költséget csökkent, plusz bevételt is termel</h2>
-            <p class="list-disc text-[17px] leading-7 space-y-5]">
+            <p class="list-disc text-lg leading-7 space-y-5]">
               Kényelmet, időt adunk ezzel vendégeinknek, de az ügyfélélmény tovább fokozható, ami ráadásul az elégedett, visszatérő vendégen túl,
               további bevételt jelent számunkra. A várakozás alatt akár - kedvezményesen - fogyaszthat, vagy további szolgáltatásokat vehet igénybe
               tőlünk. Mindezen akciókat akár a rendszeren keresztül is közvetíthetjük számára (ügyfélkijelzőn vagy üzenetben). Az emberek túlterheltek
