--- a/src/pages/hu/uzemeltetes.astro
+++ b/src/pages/hu/uzemeltetes.astro
@@ -21,7 +21,7 @@ changeLanguage("hu");
 					</Link>
 				</div>
 				</div>
-        <div class="mt-10 md:mt-0 basis-[38%] overflow-hidden">
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
 					<img class="w-full block" src="/images/ERPNext-implementation.jpg" alt="ERPNext Introduction" />
 				</div>
 			</div>
