--- a/src/pages/hu/vuestorefront-headless-ecommerce.astro
+++ b/src/pages/hu/vuestorefront-headless-ecommerce.astro
@@ -11,7 +11,7 @@ changeLanguage("hu");
 	<Container>
 		<div class="px-5 pt-10">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
-				<div class="flex flex-col h-full justify-center">
+				<div class="flex flex-col h-full justify-center basis-3/5">
 					<h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">VueStore&shy;Front Headless webáruház</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">A sebességért és a függetlenségért.</h2>
 					<div>
@@ -20,7 +20,7 @@ changeLanguage("hu");
 						</Link>
 					</div>
 				</div>
-        <div class="mt-10 md:mt-0">
+        <div class="mt-10 md:mt-0 basis-[38%] overflow-hidden">
 					<img class="w-full" src="/images/vuestorefront-headless-ecommerce.jpg" alt="" />
 				</div>
 			</div>
