--- a/src/pages/invoicing.astro
+++ b/src/pages/invoicing.astro
@@ -9,10 +9,10 @@ changeLanguage("en");
 
 <Layout lang="en" title="ERPNext bevezetés és támogatás">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">ERPNext invoicing</h1>
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+				<div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext invoicing</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Hungarian Invoicing with ERPNext - Coming Soon in 2024 Q1</h2>
 				<div>
 					<Link href="/contact">
@@ -20,12 +20,12 @@ changeLanguage("en");
 					</Link>
 				</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/ERPNext-magyar-szamlazas.jpg" alt="ERPNext bevezetés" />
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+					<img class="w-full" src="/images/ERPNext-magyar-szamlazas.jpg" alt="ERPNext bevezetés" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">ERPNext hungarian invoicing</h2>
 					<p class="text-xl py-10 dark:text-white text-[#1F2634]">We will soon make available the issuance of invoices compliant with Hungarian regulations from the ERPNext system.</p>
 					<img src="/images/IyzD8FB.png" alt="" />
@@ -33,7 +33,6 @@ changeLanguage("en");
 					<img src="/S1Fzpjh.png" alt="" />
 				</section>
 
-			
 				<section id="contact-form-2">
 					<NewsLetter />
 				  </section>
