--- a/src/pages/mautic-marketing-automation-platform.astro
+++ b/src/pages/mautic-marketing-automation-platform.astro
@@ -9,10 +9,10 @@ changeLanguage("en");
 
 <Layout lang="hu" title="Mautic Marketing and Newsletter Platform">
     <Container>
-        <div class="px-5">
-            <div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-                <div class="flex flex-col h-full justify-center">
-                    <h1 class="text-[60px] leading-none font-semibold">Mautic marketing platform</h1>
+    <div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+        <div class="flex flex-col h-full justify-center basis-3/5">
+                    <h1 class="text-4xl md:text-5xl leading-none font-semibold">Mautic marketing platform</h1>
                     <h2 class="text-xl text-[#192734] dark:text-white my-4">Marketing automation and newsletters.</h2>
 				<div>
 					<Link href="/contact/">
@@ -20,37 +20,37 @@ changeLanguage("en");
 					</Link>
 				</div>
                 </div>
-                <div>
-                    <img class="w-[40vw]" src="/mautic-marketing-automation-platform.jpg" alt="" />
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+                    <img class="w-full" src="/mautic-marketing-automation-platform.jpg" alt="" />
                 </div>
             </div>
             <div class="flex flex-col items-center">
-                <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+                <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
                     <h2 class="font-bold text-3xl mb-10">Mautic - From Visitor to Buyer</h2>
-                    <p class="list-disc text-[17px] leading-7 space-y-5">
+                    <p class="list-disc text-lg leading-7 space-y-5">
                         The Mautic marketing automation platform offers similar services to well-known CRM software, from Salesforce to HubSpot. It can be used as a CRM, but it's more advisable to leverage its CRM automation capabilities. You can use Mautic for tracking website visitors, analyzing their behavior, and delivering the right content to them.
                 </section>
 
-                <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+                <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
                     <h2 class="font-bold text-3xl mb-10">Mautic Landing Pages</h2>
-                    <p class="list-disc text-[17px] leading-7 space-y-5">
+                    <p class="list-disc text-lg leading-7 space-y-5">
                         With Mautic, you can easily create landing pages without coding, even as a multilingual website with a menu system. In this case, measurement and subscription, which is the primary conversion in Mautic, can be used automatically. Besides the rapid landing page building feature, Mautic is excellent for tracking visitors, collecting leads, and managing their data using forms and subscription management. With the handling of complex campaigns, you can also serve interested visitors with newsletters.
                 </section>
-                <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+                <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
                     <h2 class="font-bold text-3xl mb-10">Mautic Free Newsletter Software</h2>
-                    <p class="list-disc text-[17px] leading-7 space-y-5">
+                    <p class="list-disc text-lg leading-7 space-y-5">
                         Another significant advantage of Mautic is that you can easily create newsletters and send them to the lists you manage and maintain. Following necessary and common rules, from handling subscriptions and data updates to creating mobile and desktop-responsive newsletters, the process is straightforward. However, for sending free newsletters, you'll need an email delivery service, which can be SMTP or an API-based solution to send emails from the Mautic system.
                 </p>
                 </section>
-                <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+                <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
                     <h2 class="font-bold text-3xl mb-10">Mautic Conversion</h2>
-                    <p class="list-disc text-[17px] leading-7 space-y-5">
+                    <p class="list-disc text-lg leading-7 space-y-5">
                         Mautic allows its tracking code to be inserted into any website, enabling us to see which visitors viewed our content, clicked on links, read our newsletters, and perform additional automated tasks based on these behaviors. For example, we can send new offers to interested parties. With integrations and lead scoring, which involves assigning points to prospects based on various activities and attributes, we can decide to pass the lead to the sales team for follow-up.
                 </p>
                 </section>
-                <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+                <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
                     <h2 class="font-bold text-3xl mb-10">Mautic Integration</h2>
-                    <p class="list-disc text-[17px] leading-7 space-y-5">
+                    <p class="list-disc text-lg leading-7 space-y-5">
                         Our salespeople can use Mautic as a conventional CRM, but in a more complex business, it may be advisable to send the prepared leads to our CRM system as the next step in Mautic automation. For example, with the <a href="/erpnext/" style="text-decoration: underline;">ERPNext</a> or <a href="/odoo-erp/" style="text-decoration: underline;">Odoo</a> ERP systems' CRM modules, we can use Mautic, either with an integration module or an external tool like the <a href="/n8n-zapier-make-integromat/" style="text-decoration: underline;">n8n</a> software, as they inherently provide full API systems for the mentioned software solutions.
                 </p>
                 </section>
