--- a/src/pages/n8n-zapier-make-integromat.astro
+++ b/src/pages/n8n-zapier-make-integromat.astro
@@ -9,10 +9,10 @@ changeLanguage("en");
 
 <Layout lang="en" title="n8n ">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">n8n the missing piece</h1>
+    <div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+        <div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">n8n the missing piece</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Be up to date on everything.</h2>
 				<div>
 					<Link href="/contact/">
@@ -20,14 +20,14 @@ changeLanguage("en");
 					</Link>
 				</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/n8n-zapier-make-integromat.jpg" alt="" />
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+					<img class="w-full" src="/images/n8n-zapier-make-integromat.jpg" alt="" />
 				</div>
 			</div>
 <div class="flex flex-col items-center">
-    <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+    <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
         <h2 class="font-bold text-3xl mb-10">Are there still repetitive, boring tasks?</h2>
-        <p class="list-disc text-[17px] leading-7 space-y-5]">
+        <p class="list-disc text-lg leading-7 space-y-5]">
             Anyone familiar with n8n automation software, or its similar predecessors like Zapier, Make (Integromat), knows that even when using the best integrated software, such as ERPNext or Odoo, there are often occasions when you need to use other software, apps, or websites alongside these systems.
             </br></br>
             In such cases, you often need data from your own system or have to perform repetitive tasks.
@@ -36,23 +36,23 @@ changeLanguage("en");
         </p>
     </section>
 
-    <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+    <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
         <h2 class="font-bold text-3xl mb-10">Missing features in your familiar software?</h2>
-        <p class="list-disc text-[17px] leading-7 space-y-5]">
+        <p class="list-disc text-lg leading-7 space-y-5]">
             Despite considering the use of what we consider the ideal back-end system, such as ERPNext or Odoo, and keeping VueStoreFront headless or static websites with no synchronization as the best solution in most cases, there are situations where we need synchronization. This is especially true when the other system with which we need to exchange data is not our own. In such cases, synchronization is necessary if we don't want to manually copy data, which is the most expensive and risky solution.
             </br></br>
             For example, while ERPNext can natively sync with Google Calendar, it doesn't cover everything. Therefore, we can use n8n to create Google Calendar entries from ERPNext doctypes that wouldn't be possible by default. There are many possibilities, including using it for sending emails, but it's essential to be aware of the system's limitations. We have even created a complex "web page scraper" application with it, but it may be more practical to use other solutions for such cases.
         </p>
     </section>
-    <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+    <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
         <h2 class="font-bold text-3xl mb-10">Automation and Prototyping</h2>
-        <p class="list-disc text-[17px] leading-7 space-y-5]">
+        <p class="list-disc text-lg leading-7 space-y-5]">
             As evident from the examples and the general overview, n8n is suitable for many tasks in automation. Despite its limitations, it can handle robust business processes because it is a reliable, scalable, and open-source* (fair code license) software. However, sometimes we use it for prototyping and testing due to the possibility of quick development (low code, no code). If it proves successful, we then create a solution that is easier and faster to build based on our experience.
         </p>
     </section>
-    <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+    <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
         <h2 class="font-bold text-3xl mb-10">Yes, it can be integrated with ChatGPT out of the box</h2>
-        <p class="list-disc text-[17px] leading-7 space-y-5]">
+        <p class="list-disc text-lg leading-7 space-y-5]">
             Using this trick, we can channel the services offered by AI in a way that would be much more cumbersome with other methods. For those unfamiliar with n8n's capabilities, it's a good idea to first explore the available integrations and instantly (re)usable "workflows" because they offer many ideas about what it can be used for. It can simplify our business processes, free us from repetitive, time-consuming tasks, and this applies not only to administrative tasks but also to sales and marketing processes (e.g., Mautic, Twitter, Chatbot integrations), project management, and even operations.
         </p>
     </section>
