--- a/src/pages/queue-management-system.astro
+++ b/src/pages/queue-management-system.astro
@@ -46,21 +46,21 @@ const pricingData = [
   <Container>
     <div class="px-5 pt-10">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
-        <div class="flex flex-col h-full justify-center">
+        <div class="flex flex-col h-full justify-center basis-3/5">
           <h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">Queue Manag&shy;ement Kiosk System.</h1>
           <h2 class="text-xl text-[#192734] dark:text-white my-4">For Hotels and Hostels.</h2>
           <a href="#pricing">
             <Button class="md:px-3 md:py-2 leading-6" style="primary">Plans</Button>
           </a>
         </div>
-        <div class="mt-10 md:mt-0">
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
           <img class="w-full" src="/images/qms.jpg" alt="" />
         </div>
       </div>
       <div class="flex flex-col items-center">
         <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
           <h2 class="font-bold text-3xl mb-10">No More Unnecessary Waiting in Line</h2>
-          <p class="list-disc text-[17px] leading-7 space-y-5]">
+          <p class="list-disc text-lg leading-7 space-y-5]">
             Nobody likes to wait in line, especially after a long journey. And a guest arriving at a hotel or hostel has usually traveled a long way
             to get to the check-in desk. In both the digital and physical sense, as the "digital journey" begins well before the reservation and
             continues even after checking out. Our common goal is to turn them into returning customers, which we can achieve by gathering feedback,
@@ -70,7 +70,7 @@ const pricingData = [
 
         <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
           <h2 class="font-bold text-3xl mb-10">Enhancing Customer Experience Made Easy</h2>
-          <p class="list-disc text-[17px] leading-7 space-y-5]">
+          <p class="list-disc text-lg leading-7 space-y-5]">
             With our queue management system, you can eliminate the line not only in front of the reception but also incorporate it
             into the aforementioned digital user journey, differentiating yourself from competitors by offering queue-free check-ins and potentially
             increasing booking conversions. Instead of standing in line, we can seat our guests, which is crucial in this industry, especially after a
@@ -83,7 +83,7 @@ const pricingData = [
         </section>
         <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
           <h2 class="font-bold text-3xl mb-10">Not Just Cost Savings, But Also Additional Revenue</h2>
-          <p class="list-disc text-[17px] leading-7 space-y-5]">
+          <p class="list-disc text-lg leading-7 space-y-5]">
             We provide convenience and time to our guests, but we can further enhance the customer experience, which not only satisfies and retains
             customers but also generates additional revenue for us. Guests can enjoy discounts on consumption or avail additional services while
             waiting. All of these actions can be conveyed through the system (on the customer display or via messages). People may be overwhelmed by
