--- a/src/pages/shopify-ecommerce.astro
+++ b/src/pages/shopify-ecommerce.astro
@@ -9,10 +9,10 @@ changeLanguage("en");
 
 <Layout lang="hu" title="Shopify eCommerce">
     <Container>
-        <div class="px-5">
-            <div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-                <div class="flex flex-col h-full justify-center">
-                    <h1 class="text-[60px] leading-none font-semibold">Shopify eCommerce</h1>
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+				<div class="flex flex-col h-full justify-center basis-3/5">
+                    <h1 class="text-4xl md:text-5xl leading-none font-semibold">Shopify eCommerce</h1>
                     <h2 class="text-xl text-[#192734] dark:text-white my-4">The international industry standard.</h2>
 				<div>
 					<Link href="/contact/">
@@ -20,14 +20,14 @@ changeLanguage("en");
 					</Link>
 				</div>
                 </div>
-                <div>
-                    <img class="w-[40vw]" src="/shopify-ecommerce.jpg" alt="" />
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+                    <img class="w-full" src="/shopify-ecommerce.jpg" alt="" />
                 </div>
             </div>
             <div class="flex flex-col items-center">
-                <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+                <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
                     <h2 class="font-bold text-3xl mb-10">Shopify - Marketers' Favorite Webshop</h2>
-                    <p class="list-disc text-[17px] leading-7 space-y-5">
+                    <p class="list-disc text-lg leading-7 space-y-5">
                         Shopify doesn't need much of an introduction. Even those who don't use it probably know about it. Like many software solutions, it has its advantages and disadvantages, but it has become one of the most widespread solutions globally for a reason.
                         
                         There are other similarly popular solutions, but Shopify isn't free, yet it managed to stay ahead.
@@ -38,15 +38,15 @@ changeLanguage("en");
                     </p>
                 </section>
 
-                <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+                <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
                     <h2 class="font-bold text-3xl mb-10">Shopify Integration</h2>
-                    <p class="list-disc text-[17px] leading-7 space-y-5">
+                    <p class="list-disc text-lg leading-7 space-y-5">
                         Despite the continuous expansion of Shopify's features, it stands out for the wide range of extra apps available through the Shopify App Store. These apps include various integrations made possible by the Shopify API.
                     </p>
                 </section>
-                  <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+                  <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
                     <h2 class="font-bold text-3xl mb-10">Independently or Integrated</h2>
-                    <p class="list-disc text-[17px] leading-7 space-y-5">
+                    <p class="list-disc text-lg leading-7 space-y-5">
                         We've discussed the advantages and disadvantages of stand-alone and integrated systems before. Despite the continuous growth and expansion mentioned earlier, integration sets Shopify apart. Some other software solutions treat Shopify as a "webshop" and provide connectivity options for it.
                         
                         Just as Shopify can't function as an enterprise resource planning (ERP) software, most integrated solutions, even if they offer e-commerce capabilities, can't be as exceptional as purpose-built software. This is where an ambivalent approach is important. While we favor integrated systems for their advantages and accept their potential limitations, we consider e-commerce and webshop management alongside our integrated system.
@@ -56,9 +56,9 @@ changeLanguage("en");
                         We also mention the <a href="/erpnext/" style="text-decoration: underline;">ERPNext</a> system, which has a similar situation, with the main difference being that Shopify is the most supported option, offering the most features and maintenance. However, these solutions are only for integration and may be suitable for a certain stage of business growth. Larger players may need something different.
                     </p>
                 </section>
-                <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+                <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
                     <h2 class="font-bold text-3xl mb-10">Headless Shopify?</h2>
-                    <p class="list-disc text-[17px] leading-7 space-y-5">
+                    <p class="list-disc text-lg leading-7 space-y-5">
                         Those who have been in the e-commerce business for a while and encounter difficulties with their webshops often end up with Shopify. However, the truly lucky ones start with Shopify as their first webshop. But growth should never stop, and Shopify understands this. No matter how good their system is, businesses in a growth phase need even faster and better solutions.
                         
                         Shopify recognized this when they launched Shopify Premium Headless. However, with a starting monthly fee of $2000, it's not for everyone, even though most businesses would like to have such a system.
