--- a/src/pages/erpnext.astro
+++ b/src/pages/erpnext.astro
@@ -12,20 +12,20 @@ changeLanguage("en");
   <Container>
 		<div class="px-5 pt-10">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
-        <div class="flex flex-col h-full justify-center">
-          <h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">Monolithon is the solid foundation</h1>
+        <div class="flex flex-col h-full justify-center basis-3/5">
+          <h1 class="text-4xl md:text-5xl leading-none font-semibold">Monolithon is the solid foundation</h1>
           <h2 class="text-xl text-gray-500 my-4 dark:text-white">ERPNext and Frappe knowledge.</h2>
           <div>
             <Link href="/contact/" style="primary">Let's Talk!</Link>
           </div>
         </div>
-        <div class="mt-10 md:mt-0">
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
           <img class="w-full" src="/images/erpnextImage.png" alt="" />
         </div>
       </div>
     </div>
     <div class="flex flex-col items-center dark:bg-stone-900">
-      <section class="py-8 px-4 md:w-[45vw]">
+      <section class="py-8 px-4 md:w-2/3">
         <h2 class="font-bold text-3xl mb-10 text-[#192734] dark:text-white">ERPNext is the only truly free and open source, complete ERP</h2>
         <ul class="list-disc md:ml-10 space-y-5 dark:text-white text-[#192734]">
           <li>
