--- a/src/pages/hu/erpnext.astro
+++ b/src/pages/hu/erpnext.astro
@@ -11,14 +11,14 @@ changeLanguage("hu");
 	<Container>
 		<div class="px-5 pt-10">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
-				<div class="flex flex-col h-full justify-center">
+				<div class="flex flex-col h-full justify-center basis-3/5">
 					<h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">Monolithon a biztos alap</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext és Frappe magyarul.</h2>
 				<div>
 						<Link href="/contact/" style="primary">Beszéljünk!</Link>
 				</div>
 				</div>
-        <div class="mt-10 md:mt-0">
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
           <img class="w-full" src="/images/erpnextImage.png" alt="" />
         </div>
 			</div>
