--- a/src/pages/hu/odoo-magyarul.astro
+++ b/src/pages/hu/odoo-magyarul.astro
@@ -9,10 +9,10 @@ changeLanguage("hu");
 
 <Layout lang="hu" title="Odoo magyarul">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">Odoo magyarul</h1>
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+				<div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold">Odoo magyarul</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Üzleti folyamatok egyszerűen.</h2>
 					<div>
 						<Link href="/hu/kapcsolat">
@@ -20,14 +20,14 @@ changeLanguage("hu");
 						</Link>
 					</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/odoo-magyarul.jpg" alt="" />
+        <div class="mt-10 md:mt-0 basis-[38%] overflow-hidden">
+					<img class="w-full" src="/images/odoo-magyarul.jpg" alt="" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">TinyERP-től az OpenERP-n át az Odoo-ig</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 							Az Odoo egy olyan üzleti alkalmazásokat kínáló szoftver, amely a kezdetektől fogva egy hihetetlen utat tett meg. Az indulás óta figyelemmel kísértük, használtuk és támogattuk ezt a rendszert, amikor még TinyERP, majd OpenERP néven futott. De miért fontos ez?
 				</br></br>
 				A fejlődéséből több dolgot is leszűrhetünk: </br></br>
@@ -52,23 +52,23 @@ changeLanguage("hu");
 					
 				</section>
 
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Odoo magyarul</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						Az Odoo nem csak a fentiek alapján tett meg nagy utat, hanem Magyarországon is egyre ismertebb, elterjedtebb a magyar Odoo Partnereknek hála. Ahogy a legtöbb vállalatirányítási-rendszer, ERP része a számlázás, így alapvető fontosságú, hogy az Odoo magyar partnereknek hála ma már az Odoo rendszer magyar számlázási tudással is bővíthető. 
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Odoo a magyar számlázáson túl, mi mindenre is használható?</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						Az autópályák, vagy a reptéri út mellett kihelyezett hatalmas Odoo óriásplakátról az Odoo már ismerős lehet, és aki nyílt forrású ERP szoftvert keres, vagy az üzleti szoftver által lefedett területekre keres megoldást, legyen az:<br><br>
 						CRM, Értékesítés, HR, Raktár, Kassza/Pénztárgép, Éttermi rendszer, Bérlés, Projektmenedzsment, Gyártás, Szervizelés, stb, az bizonyára már találkozott az Odoo-val. <br><br>
 						És, aki találkozott már vele, az nagy valószínűséggel bele is szeretett, ha lehet ilyet mondani egy szoftverről, főleg ha egy kicsit ki is próbálta, mert nem csupán könnyű használni, mert logikus, így a betanulás és betanítás is egyszerűbb, hanem az integráltsága miatt, aminek két szintje is van. Az egyik, hogy szinte mindent elintézhetünk Odoo belül, és nem kell több szoftvert megvásárolni, megtanulni és használni, ami a pénztárcáknak és a produktivitásunknak is nagyon jót tesz, a másik pedig, hogy könnyedén integrálható más szoftverekkel, mert attól még, hogy rengeteg területet lefed, szükség lehet integrációkra, mint például a NAV kompatibilis magyar számlázásra. 
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Odoo mindenkinek, aki...</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 							Az Odoo, ahogy a legtöbb üzleti szoftver nagyon komplex, hiszen az üzlet maga nagyon komplex tud lenni. A komplexitás abból is adódik, hogy minden üzlet egyedi, viszont a szoftver általános jellegéből következik, hogy  mindegyiket támogatnia kell valamilyen szinten. Belátható, hogy az Odoo, és ahogy egyik szoftver, sem alkalmas mindenkinek. Nagyon jó választás lehet azoknak, akik tudják és akarják fejlesztni a saját üzleti folyamataikat, meríteni abból ahogyan az Odoo testreszabás nélkül tudja támogatni az üzletüket, vagy azok számára akik pont a testreszabhatósága miatt tennék le a voksot az Odoo mellett, annak tudatában, hogy minden egyedi igény megvalósítása jelentős költséget teremt, viszont a másik oldalról ez profitnövekedést és/vagy egyéb, például humán erőforrás költség megtakarítást eredményezhet. Éppen ezért az Odoo és Odoo támogató partnerként mi sem a hagyományos ERP bevezetési metodológiát követjük, hanem az igények alapján szállítunk üzleti értéket teremtő funkciókat amik megtérülnek. <br><br>
 							Az Odoo ma már több, mint 7 millió felhasználó életét segíti minden nap, köszönhetően annak, hogy a fent kiemelt appok mellett több, mint 10.000 kész app érhető el hozzá az üzleti élet minden területéről. 
 					</p>
