--- a/src/pages/hu/shopify-webaruhaz.astro
+++ b/src/pages/hu/shopify-webaruhaz.astro
@@ -9,10 +9,10 @@ changeLanguage("hu");
 
 <Layout lang="hu" title="Shopify webáruház magyarul">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
-				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">Shopify webáruház</h1>
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
+				<div class="flex flex-col h-full justify-center basis-3/5">
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold">Shopify webáruház</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">A nemzetközi iparági sztenderd.</h2>
 				<div>
 					<Link href="/hu/kapcsolat">
@@ -20,14 +20,14 @@ changeLanguage("hu");
 					</Link>
 				</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/shopify-ecommerce.jpg" alt="" />
-				</div>
+        <div class="mt-10 md:mt-0 basis-1/2 overflow-hidden">
+                    <img class="w-full" src="/shopify-ecommerce.jpg" alt="" />
+                </div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Shopify a marketingesek kedvenc webáruháza</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 							A Shopify-t sokaknak nem kell bemutatni, mert bizonyára azok is ismerik akik ugyan nem használják. És persze, ahogy sok szoftvernek, úgy ennek is vannak előnyei is hátrányai is, azonban nem véletlenül lett az egyik legelterjedtebb megoldás világszinten. 
 				</br></br>
 				Vannak még hasonlóan kedvelt megoldások, de a Shopify egy nem ingyenes megoldás, és ennek ellenére tudott előzni. </br></br>
@@ -35,15 +35,15 @@ changeLanguage("hu");
 				Persze van sok havidíjas, bérelhető webáruház a piacon, még olyanok is amelyekben rengeteg funkció található, ezért a sikerhez a megbízhatóságra is szükség volt.</br></br>
 				</section>
 
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Shopify integráció</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 						Annak ellenére, hogy a Shopify funkciói folyamatosan bővülnek és - jellemzően külföldi piacokon - már webáruház működés mellett eladóhelyi, vagy akár raktározási funkciókat is tartalmaz, az egyik igazán kiemelkedő előnye mégis az, hogy rengeteg extra app érhető el hozzá az Shopify piacterén, melyek közül kiemelkednek a különböző integárciók, a Shopify API-nak köszönhetően.  
 					</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Önállóan vagy integráltan</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 					Írtunk már korábban a sziget és integrált rendszerek előnyeiről hátrányairól, de a fentebb említett folyamatos és bővülés ellenére az integráció az ami szintén kiemeli a mezőnyből, mert sok más szoftver is a "webáruházként" kezeli a Shopify-t és néha egyediként ehhez az ecommerce platformhoz nyújtanak összekapcsolódási lehetőséget. </br></br>
 					Ahogyan a Shopify nem tud ügyviteli szoftverként funkciónálni, úgy a legtöbb integrált megoldás, mégha nyújt is ecommerce megoldást, az messze nem tud olyan kiemelkedő lenni, mint egy célszoftver. És itt fontos az ambivalens megközelítés, amikor ugyan előnyben részesítjük az integrált rendszereket, mert kihasználjuk annak minden előnyét, elfogadjuk az esetleges limitációit, azzal szemben, mintha minden célfeleadatra egy-egy célszoftvert használnák - annak minden saját és integárciós nyűgével - mégis nénány területet, mint például az ecommerce/webáruház kiemelten kezelünk az integrált rendszerünk mellett. 
 					Meglátásunk szerint így érdemes kezelni az <a href="/hu/odoo-magyarul/" style="text-decoration: underline;">Odoo</a> ERP vállalatirányítás rendszert, amihez célszerű egy webáruházat csatolni, és bár ott van lehetőség több webáruház kapcsolására a tapasztalataink alapján a Shopify az egyik legjobb választás az egyszerű összekapcsolás és üzemeltetés miatt. </br></br>
@@ -51,9 +51,9 @@ changeLanguage("hu");
 				Itt persze meg kell említenünk, hogy mindkét megoldás csupán integráció, amely egy vállalkozás növekedésének bizonyos szakaszában megfelelő lehet, de az igazi nagy játékosoknak valami másra van szüksége. 
 				</p>
 				</section>
-				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+				<section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Headless Shopify?</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5]">
+					<p class="list-disc text-lg leading-7 space-y-5]">
 							 Aki nem ma kezdte és nehézségei vannak a webáruházával, az sokszor a Shopify-nál köt ki. De az igazán szerencsések már első webáruházként a Shopify rendszerével kezdik. Viszont a növekedés nem állhat meg, és ezt a Shopify is tudja. Hiszen bármilyen jó is a rendszerük, a növekedésben lévő ügyfeleknek még gyorsabb és még jobb megáldásokra van szüksége. <br><br>
 							Ezt ismerte fel a Shopify amikor elindította a Shopify Premium Headless megoldását. Ez azonban a havi 2000 dollártól induló havidíjával nem mindenkinek való, mégha alapvetően mindenki ilyen rendszert szeretne. </br></br>
 							Ezért is ajánljuk a Shopify mellett a hasonlóan, sőt már eredetileg Headless technológiaként megszületett <a href="/hu/vuestorefront-headless-ecommerce/" style="text-decoration: underline;">VueStoreFront</a> megoldást. Mert itt is igaz a mondás, hogy a Monolithon csapata a feladathoz választ eszközt, akár ERP-ről, akár ecommerce, webáruház megoldásról legyen szó. </br></br>
